@@ -7,6 +7,7 @@
   * added action 'show' to 'repo' module to be able to open browser 
     with an URL of a shared repository. For example, 'ck show repo:ck-autotuning'
   * Adding support function to get value from list without error if out of bounds (useful for sorting)
+  * Before updating kernel from GitHub, check that it's a Git installation (noticed by Abdul Memon)
 
 * V1.6.14
   * forgot to add cfg module to setup.py (preferred to generate new version)
